WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26877
[GTK] DRT fixes to pass new plugin test
https://bugs.webkit.org/show_bug.cgi?id=26877
Summary
[GTK] DRT fixes to pass new plugin test
Xan Lopez
Reported
2009-06-30 23:27:07 PDT
bug #15457
requires a small modification in DRT in order to pass its new test. Done in attached patch.
Attachments
logsrc.patch
(2.32 KB, patch)
2009-06-30 23:30 PDT
,
Xan Lopez
jmalonzo
: review+
Details
Formatted Diff
Diff
pluginlog.patch
(5.03 KB, patch)
2009-06-30 23:31 PDT
,
Xan Lopez
jmalonzo
: review+
Details
Formatted Diff
Diff
compilerwarning.patch
(3.24 KB, patch)
2009-06-30 23:39 PDT
,
Xan Lopez
jmalonzo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2009-06-30 23:30:42 PDT
Created
attachment 32112
[details]
logsrc.patch Fix DRT.
Xan Lopez
Comment 2
2009-06-30 23:31:06 PDT
Created
attachment 32113
[details]
pluginlog.patch Small cleanup.
Jan Alonzo
Comment 3
2009-06-30 23:35:19 PDT
Comment on
attachment 32112
[details]
logsrc.patch Ok. r=me.
Jan Alonzo
Comment 4
2009-06-30 23:36:37 PDT
Comment on
attachment 32113
[details]
pluginlog.patch Fine. r=me.
Xan Lopez
Comment 5
2009-06-30 23:39:06 PDT
Created
attachment 32115
[details]
compilerwarning.patch Fix compiler warnings.
Jan Alonzo
Comment 6
2009-06-30 23:43:10 PDT
Comment on
attachment 32115
[details]
compilerwarning.patch
> switch (variable) { > case NPPVpluginNameString: > - *((char **)value) = "WebKit Test PlugIn"; > + *((char **)value) = (char*)"WebKit Test PlugIn";
Please change these to static_casts before commit. r=me.
Xan Lopez
Comment 7
2009-06-30 23:50:19 PDT
(In reply to
comment #6
)
> (From update of
attachment 32115
[details]
[review]) > > switch (variable) { > > case NPPVpluginNameString: > > - *((char **)value) = "WebKit Test PlugIn"; > > + *((char **)value) = (char*)"WebKit Test PlugIn"; > > Please change these to static_casts before commit. r=me. >
static_cost won't work in this case. I'll use const_cast.
Xan Lopez
Comment 8
2009-06-30 23:51:46 PDT
All patches landed as
r45429
,
r45430
and
r45431
, closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug